# cockpit-opensuse

./: Makefile.am  b
pkg/apps/: index.html
pkg/kdump/: index.html  manifest.json
pkg/metrics/: index.html
pkg/networkmanager/: firewall.html  index.html  manifest.json
pkg/packagekit/: index.html  manifest.json
pkg/playground/: index.html  journal.html  metrics.html  plot.html  react-patterns.html  speed.html  test.html
pkg/selinux/: setroubleshoot.html
pkg/shell/: index.html  shell.html  topnav.jsx
pkg/sosreport/: index.html
pkg/static/: css-overrides.css
pkg/storaged/: format-dialog.jsx  index.html  manifest.json
pkg/systemd/: hwinfo.html  index.html  logs.html  manifest.json  services.html  terminal.html
pkg/users/: index.html
selinux/: cockpit.te
src/branding/sle-micro/: Makefile.am
src/branding/suse/: README.md
src/branding/suse/src/: css-overrides.css
tools/: cockpit.spec
